Correction des alignements

--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -40,6 +40,7 @@
     border-bottom: 1px solid #deb992;
     padding: 20px;
     width: 80%;
+    max-width: 1240px;
     margin: auto;
     margin-bottom: 80px;
   }
